# py-tlsh

./: .gitignore  README.md  pyproject.toml
tests/: cases.yaml  tests.py
tlsh/: __init__.py  __main__.py  old.py  rewrite.py
